add about us page

--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,6 @@
 
   <title>Harms Insurance Agency</title>
   <meta name="description" content="Harms Insurance Agency">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -45,8 +44,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="about-us.html">About Us</a></li>
             <li><a href="#contact">Products</a></li>
             <li><a href="#contact">Claims &amp; Payments</a></li>
             <li><a href="#contact">Contact Us</a></li>
@@ -55,77 +54,87 @@
       </div>
     </nav>
 
-    <!--Slider-->
- 
-    <div class="my-slider">
-      <ul>
-        <li id="blue-slide">
-          <img src="img/blue-bg.jpg">
-          <p>WELCOME TO</p>
-          <p>HARMS INSURANCE AGENCY</p>
-          
-        </li>
-        <li id="house-slide"><img src="img/house.jpg"></li>
-        <li id="car-slide"><img src="img/car.jpg"></li>
-      </ul>
-    </div>
+    <!--Breadcrumb Bar-->
 
-    <!--Products-->
-
-    <section>
+    <div class="breadcrumb-bar">
       <div class="container">
         <div class="row">
-          <h1 id="products-title">Products</h1>
-          <h3 id="products-text">As an independent agency, we can offer a range of insurance products, even beyond those listed below.  Contact us today to see how we can help with your insurance needs.</h3>
-          <div class="product-photos">
-            <div class="col-md-3">
-              <a href="#"><img src="img/house-sm.jpg"></a>
-              <a class="product-link-text" href="#">Home &amp; Auto Insurance</a>
+          <div class="breadcrumb-wrapper">
+            <div class="col-md-4 breadcrumb-text">
+              <h3>About Us</h3>
             </div>
-            <div class="col-md-3">
-              <a href="#"><img src="img/farm-sm.jpg"></a>
-              <a class="product-link-text" href="#">Farm Insurance</a>
-            </div>
-            <div class="col-md-3">
-              <a href="#"><img src="img/business-sm.jpg"></a>
-              <a class="product-link-text" href="#">Small Business Insurance</a>
-            </div>
-            <div class="col-md-3">
-              <a href="#"><img src="img/life-sm.jpg"></a>
-              <a class="product-link-text" href="#">Life Insurance</a>
+            <div class="col-md-2 col-md-offset-4 pull-right breadcrumb-text">
+              <a href="#">Home</a>
+              <a href="#">About Us</a>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
 
-         </div>
+    <!--Meet Our Staff-->
+
+    <section class="meet-our-staff">
+      <div class="container">
+        <div class="row">
+          <div id="meet-staff-title">
+            <h1>MEET OUR STAFF</h1>
+          </div>
+            <div class="col-md-10 col-md-offset-1 meet-staff-col">
+              <div class="col-md-4">
+                <div class="img-box">
+                  <img src="img/david.jpg">
+                  <h4>David Harms</h4>
+                </div>
+                <div class="bottom-blue-bar"></div>
+              </div>
+              <div class="col-md-4">
+                <div class="img-box">
+                  <img src="img/pam.jpg">
+                  <h4>Pam Harms</h4>
+                </div>
+                <div class="bottom-blue-bar"></div>
+              </div>
+              <div class="col-md-4">
+                <div class="img-box">
+                  <img src="img/carlin.jpg">
+                  <h4>Carlin Dyck</h4>
+                </div>
+                <div class="bottom-blue-bar"></div>
+              </div>
+            </div> 
+        </div>
       </div>
     </section>
 
-    <!--Who We Are-->
+    <!--About Us-->
 
-    <section id="who-we-are">
+    <section class="about-us">
       <div class="container">
         <div class="row">
-          <div class="who-we-are">
-            <h4>Harms Insurance Agency</h4>
-            <h2>WHO WE ARE</h2>
-            <h3>Thanks for stopping by!  We are a small independent agency serving Western Oklahoma since 1993.  We offer personalized coverage written with reputable companies who provide excellent claims service.  We look forward to visiting with you!</h3>
-            <a class="btn-sm" href="#">About Us</a>
+          <div id="about-us-title">
+            <h1>ABOUT US</h1>
+          </div>
+          <div class="col-md-8 col-md-offset-2">
+            <div class="about-us-description">
+              <p>Our agency began in the mid-1960’s serving primarily the Mennonite congregations in Western Oklahoma with property and casualty insurance.  David Harms joined the agency in 1986 and purchased it in 1993. Since that time our clientele has expanded beyond the Mennonite boundaries, but we still base our business on biblical principals and provide the same personal service.  We make every effort to get to know our clients so that we can provide the best insurance products to meet their needs and be available to help them through the claims process.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!--Personal Service-->
+    <!--Have Questions?-->
 
-    <section id="personal-service">
+    <section class="have-questions">
       <div class="container">
         <div class="row">
-          <div class="personal-service">
-            <h4>Our Promise To You</h4>
-            <h2>PERSONAL SERVICE</h2>
-            <h3>We offer you some of the best values in auto, home, life, and commercial insurance through some of the most respected companies in the nation. We provide personal service for your insurance needs.</h3>
+          <div class="col-md-3 col-md-offset-3 question">
+            <h3>Have Questions?</div>
           </div>
-
+          <div class="col-md-3 col-md-offset-7 get-in-touch">
+            <a href="#">Get In Touch</a>
+          </div>
         </div>
       </div>
     </section>
