--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
 
   <title>Harms Insurance Agency</title>
   <meta name="description" content="Harms Insurance Agency">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="jquery-plugins/unslider.css">
