add contact page

--- a/products.html
+++ b/products.html
@@ -45,10 +45,10 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about-us.html">About Us</a></li>
-            <li><a href="products.html">Products</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li class="active"><a href="products.html">Products</a></li>
             <li><a href="claims-payments.html">Claims &amp; Payments</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="#contact">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -61,84 +61,104 @@
         <div class="row">
           <div class="breadcrumb-wrapper">
             <div class="col-md-4 breadcrumb-title">
-              <h3>About Us</h3>
+              <h3>Products</h3>
             </div>
             <div class="col-md-2 col-md-offset-4 pull-right breadcrumb-links">
               <a href="#">Home</a>
-              <a href="#">About Us</a>
+              <a href="#">Products</a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!--Meet Our Staff-->
+    <!--Insurance Offerings-->
 
-    <section class="meet-our-staff">
+    <section class="insurance-offerings">
       <div class="container">
         <div class="row">
-          <div class="section-title">
-            <h1>MEET OUR STAFF</h1>
+          <div class="col-md-6 col-md-offset-3 section-title">
+            <h1>INSURANCE OFFERINGS</h1>
+            <h3>We offer the following types of insurance policies:</h3>
           </div>
-            <div class="col-md-10 col-md-offset-1 meet-staff-col">
-              <div class="col-md-4">
-                <div class="img-box">
-                  <img src="img/david.jpg">
-                  <h4>David Harms</h4>
-                </div>
-                <div class="bottom-blue-bar"></div>
-              </div>
-              <div class="col-md-4">
-                <div class="img-box">
-                  <img src="img/pam.jpg">
-                  <h4>Pam Harms</h4>
-                </div>
-                <div class="bottom-blue-bar"></div>
-              </div>
-              <div class="col-md-4">
-                <div class="img-box">
-                  <img src="img/carlin.jpg">
-                  <h4>Carlin Dyck</h4>
-                </div>
-                <div class="bottom-blue-bar"></div>
-              </div>
-            </div> 
-        </div>
-      </div>
-    </section>
-
-    <!--About Us-->
-
-    <section class="about-us">
-      <div class="container">
-        <div class="row">
-          <div id="about-us-title">
-            <h1>ABOUT US</h1>
-          </div>
-          <div class="col-md-8 col-md-offset-2">
-            <div class="about-us-description">
-              <p>Our agency began in the mid-1960’s serving primarily the Mennonite congregations in Western Oklahoma with property and casualty insurance.  David Harms joined the agency in 1986 and purchased it in 1993. Since that time our clientele has expanded beyond the Mennonite boundaries, but we still base our business on biblical principals and provide the same personal service.  We make every effort to get to know our clients so that we can provide the best insurance products to meet their needs and be available to help them through the claims process.</p>
+          <div class="col-md-12 table-col-wrapper">
+            <div class="col-md-6 table-col">
+              <table>
+                <tr>
+                  <th id="personal-lines">Personal Lines</th>                
+                </tr>
+                <tr>
+                  <td>Homeowner</td>
+                </tr>
+                <tr>  
+                  <td>Auto</td>
+                </tr> 
+                <tr> 
+                  <td>Farm</td>
+                </tr>  
+                  <td>Mobile Homeowners</td>
+                <tr>
+                  <td>Rental Dwellings</td>
+                </tr>
+                <tr>
+                  <td>Inland Marine</td>
+                </tr>
+                <tr>
+                  <td>Boat/Watercraft</td>
+                </tr>
+                <tr>
+                  <td>Flood</td>
+                </tr>
+                <tr>
+                  <td>Recreational Vehicle</td>
+                </tr>
+                <tr>
+                  <td>Motorcycle/ATV</td>
+                </tr>
+                <tr>
+                  <td>Antique and Collectible Autos</td>
+                </tr>
+                <tr>
+                  <td>Umbrella</td>
+                </tr>
+                <tr>
+                  <td>Life</td>
+                </tr>
+              </table>
             </div>
-          </div>
+            <div class="col-md-6 table-col">
+              <table>
+                <tr>
+                  <th id="commercial-lines">Commercial Lines</th>
+                </tr>
+                <tr>
+                  <td>Property</td>
+                </tr>
+                <tr>
+                  <td>Auto</td>
+                </tr>
+                <tr>
+                  <td>Tradesman Cover Plus</td>
+                </tr>
+                <tr>
+                  <td>Business Cover Plus</td>
+                </tr>
+                <tr>
+                  <td>Liability</td>
+                </tr>
+                <tr>
+                  <td>Church</td>
+                </tr>
+              </table>
+            </div><!--end col-md-6-->
+          </div><!--end col-md-12-->
+
+          
         </div>
       </div>
     </section>
 
-    <!--Have Questions?-->
-
-    <section class="have-questions">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-lg-offset-3 question">
-            <h3>Have Questions?</div>
-          </div>
-          <div class="col-lg-3 col-lg-offset-7 get-in-touch">
-            <a href="#">Get In Touch</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
+    
     <!--Footer-->
 
     <section id="footer">
