--- a/contact-us.html
+++ b/contact-us.html
@@ -45,10 +45,10 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about-us.html">About Us</a></li>
+            <li><a href="about-us.html">About Us</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="claims-payments.html">Claims &amp; Payments</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li class="active"><a href="contact-us.html">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -61,84 +61,54 @@
         <div class="row">
           <div class="breadcrumb-wrapper">
             <div class="col-md-4 breadcrumb-title">
-              <h3>About Us</h3>
+              <h3>Products</h3>
             </div>
             <div class="col-md-2 col-md-offset-4 pull-right breadcrumb-links">
               <a href="#">Home</a>
-              <a href="#">About Us</a>
+              <a href="#">Products</a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!--Meet Our Staff-->
+    <!--Get In Touch-->
 
-    <section class="meet-our-staff">
+    <section class="insurance-offerings">
       <div class="container">
         <div class="row">
-          <div class="section-title">
-            <h1>MEET OUR STAFF</h1>
+          <div class="col-md-6 col-md-offset-3 section-title">
+            <h1>Get In Touch</h1>
           </div>
-            <div class="col-md-10 col-md-offset-1 meet-staff-col">
-              <div class="col-md-4">
-                <div class="img-box">
-                  <img src="img/david.jpg">
-                  <h4>David Harms</h4>
-                </div>
-                <div class="bottom-blue-bar"></div>
-              </div>
-              <div class="col-md-4">
-                <div class="img-box">
-                  <img src="img/pam.jpg">
-                  <h4>Pam Harms</h4>
-                </div>
-                <div class="bottom-blue-bar"></div>
-              </div>
-              <div class="col-md-4">
-                <div class="img-box">
-                  <img src="img/carlin.jpg">
-                  <h4>Carlin Dyck</h4>
-                </div>
-                <div class="bottom-blue-bar"></div>
-              </div>
-            </div> 
-        </div>
-      </div>
-    </section>
-
-    <!--About Us-->
-
-    <section class="about-us">
-      <div class="container">
-        <div class="row">
-          <div id="about-us-title">
-            <h1>ABOUT US</h1>
-          </div>
-          <div class="col-md-8 col-md-offset-2">
-            <div class="about-us-description">
-              <p>Our agency began in the mid-1960’s serving primarily the Mennonite congregations in Western Oklahoma with property and casualty insurance.  David Harms joined the agency in 1986 and purchased it in 1993. Since that time our clientele has expanded beyond the Mennonite boundaries, but we still base our business on biblical principals and provide the same personal service.  We make every effort to get to know our clients so that we can provide the best insurance products to meet their needs and be available to help them through the claims process.</p>
+          <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-6">
+              <form>
+                <p>Your Name (Required)</p>
+                <input type="text" name="name">
+                <p>Your Email (Required)</p>
+                <input type="text" name="email">
+                <p>Subject</p>
+                <input type="text" name="subject">
+              </form>
+              <p>Your Message</p>
+              <textarea name="Text1" cols="40" rows="5"></textarea>
             </div>
-          </div>
-        </div>
-      </div>
+            <div class="col-md-6 contact-information">
+              <h3>CONTACT INFORMATION</h3>
+                <h4>Address</h4>
+                <p>305 S Oklahoma<br>P.O. Box 475<br>Corn, OK 73024</p>
+                <h4>Phone</h4>
+                <p>800-657-8846</p>
+                <h4>Fax</h4>
+                <p>580-343-2661</p>
+                <h4>Email</h4>
+                <p><a href="mailto:agency@harmsinsuranceok.com">agency@harmsinsuranceok.com</a></p>
+                <p>Hours: 8-12, 1-5 M-F or by appointment</p>
+            </div>
+          </div><!--end offset-->
     </section>
 
-    <!--Have Questions?-->
-
-    <section class="have-questions">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-lg-offset-3 question">
-            <h3>Have Questions?</div>
-          </div>
-          <div class="col-lg-3 col-lg-offset-7 get-in-touch">
-            <a href="#">Get In Touch</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
+    
     <!--Footer-->
 
     <section id="footer">
