--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="about-us.html">About Us</a></li>
-            <li><a href="#contact">Products</a></li>
-            <li><a href="#contact">Claims &amp; Payments</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="claims-payments.html">Claims &amp; Payments</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
