--- a/claims-payments.html
+++ b/claims-payments.html
@@ -7,6 +7,8 @@
   <title>Harms Insurance Agency</title>
   <meta name="description" content="Harms Insurance Agency">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="jquery-plugins/unslider.css">
@@ -61,10 +63,11 @@
         <div class="row">
           <div class="breadcrumb-wrapper">
             <div class="col-md-4 breadcrumb-title">
-              <h3>Products</h3>
+              <h3>Claims &amp; Payments</h3>
             </div>
             <div class="col-md-2 col-md-offset-4 pull-right breadcrumb-links">
               <a href="#">Home</a>
+              <p class="greater-than">&gt;</p>
               <a href="#">Claims &amp; Payments</a>
             </div>
           </div>
