--- a/products.html
+++ b/products.html
@@ -7,6 +7,8 @@
   <title>Harms Insurance Agency</title>
   <meta name="description" content="Harms Insurance Agency">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="jquery-plugins/unslider.css">
@@ -48,7 +50,7 @@
             <li><a href="about-us.html">About Us</a></li>
             <li class="active"><a href="products.html">Products</a></li>
             <li><a href="claims-payments.html">Claims &amp; Payments</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -65,6 +67,7 @@
             </div>
             <div class="col-md-2 col-md-offset-4 pull-right breadcrumb-links">
               <a href="#">Home</a>
+              <p class="greater-than">&gt;</p>
               <a href="#">Products</a>
             </div>
           </div>
