form validation complete, fixes to about page

--- a/about-us.html
+++ b/about-us.html
@@ -132,13 +132,15 @@
     <section class="have-questions">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-lg-offset-3 question">
-            <h3>Have Questions?</div>
-          </div>
-          <div class="col-lg-3 col-lg-offset-7 get-in-touch">
-            <a href="#">Get In Touch</a>
-          </div>
-        </div>
+          <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-6 question">
+              <h3>Have Questions?</h3>
+            </div>
+            <div class="col-md-6 get-in-touch">
+              <a class="btn-blue" href="#">Get In Touch</a>
+            </div>
+          </div><!--end md-offset-2-->  
+        </div><!--end row--> 
       </div>
     </section>
 
