code validation and cleanup

--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<img id="logo" src="img/harms-logo.png">
+					<img id="logo" src="img/harms-logo.png" alt="Harms Insurance logo">
 				</div>
 				<div class="col-md-4 col-md-offset-4">
 					<p class="header-contact-info">Harms Insurance<br>305 S Oklahoma St.<br>Corn, Oklahoma 73024<br>580-343-2485</p>
@@ -86,21 +86,21 @@
             <div class="col-md-10 col-md-offset-1 meet-staff-col">
               <div class="col-md-4">
                 <div class="img-box">
-                  <img src="img/david.jpg">
+                  <img src="img/david.jpg" alt="David">
                   <h4>David Harms</h4>
                 </div>
                 <div class="bottom-blue-bar"></div>
               </div>
               <div class="col-md-4">
                 <div class="img-box">
-                  <img src="img/pam.jpg">
+                  <img src="img/pam.jpg" alt="Pam">
                   <h4>Pam Harms</h4>
                 </div>
                 <div class="bottom-blue-bar"></div>
               </div>
               <div class="col-md-4">
                 <div class="img-box">
-                  <img src="img/carlin.jpg">
+                  <img src="img/carlin.jpg" alt="Carlin">
                   <h4>Carlin Dyck</h4>
                 </div>
                 <div class="bottom-blue-bar"></div>
@@ -150,7 +150,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png"></a>
+            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png" alt="White Harms Insurance logo"></a>
             <p id="copyright">&copy; 2016 | All Rights Reserved.</p>
           </div>
           <div class="col-md-3 footer-col">
@@ -174,7 +174,7 @@
             </div>
           </div>
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="elp-logo" src="img/elp-logo.png"></a>
+            <a href="#"><img id="elp-logo" src="img/elp-logo.png" alt="Dave Ramsey ELP logo"></a>
           </div>
         </div>
       </div>
