--- a/claims-payments.html
+++ b/claims-payments.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<img id="logo" src="img/harms-logo.png">
+					<img id="logo" src="img/harms-logo.png" alt="Harms Insurance logo">
 				</div>
 				<div class="col-md-4 col-md-offset-4">
 					<p class="header-contact-info">Harms Insurance<br>305 S Oklahoma St.<br>Corn, Oklahoma 73024<br>580-343-2485</p>
@@ -88,17 +88,17 @@
 
          <div class="row first-logo-row">
            <div class="col-md-4 claims-col">
-             <a href="#"><img src="img/goodville-logo.jpg"></a>
+             <a href="#"><img src="img/goodville-logo.jpg" alt="Goodville logo"></a>
              <a class="payments-link" href="#">Payments</a>
              <a href="#">Claim Information</a>
            </div><!--end col-md-4-->
            <div class="col-md-4 claims-col">
-             <a href="#"><img src="img/progressive-logo.jpg"></a>
+             <a href="#"><img src="img/progressive-logo.jpg" alt="Progressive logo"></a>
              <a class="payments-link" href="#">Payments</a>
              <a href="#">Claim Information</a>
            </div><!--end col-md-4-->
            <div class="col-md-4 claims-col">
-             <a href="#"><img src="img/foremost-logo.png"></a>
+             <a href="#"><img src="img/foremost-logo.png" alt="Foremost logo"></a>
              <a class="payments-link" href="#">Payments</a>
              <a href="#">Claim Information</a>
            </div><!--end col-md-4-->
@@ -106,16 +106,16 @@
 
          <div class="row second-logo-row">
           <div class="col-md-4 claims-col">
-            <a href="#"><img src="img/grundy-logo.png"></a>
+            <a href="#"><img src="img/grundy-logo.png" alt="Grundy logo"></a>
              <a class="payments-link" href="#">Claim Information</a>
           </div><!--end col-md-4-->
           <div class="col-md-4 claims-col">
-            <a href="#"><img src="img/selective-logo.jpg"></a>
+            <a href="#"><img src="img/selective-logo.jpg" alt="Selective logo"></a>
             <a class="payments-link" href="#">Payments</a>
              <a href="#">Claim Information</a>
           </div><!--end col-md-4-->
           <div class="col-md-4 claims-col">
-            <a href="#"><img src="img/philadelphia-logo.png"></a>
+            <a href="#"><img src="img/philadelphia-logo.png" alt="Philadelphia logo"></a>
             <a class="payments-link" href="#">Payments</a>
              <a href="#">Claim Information</a>
           </div><!--end col-md-4-->
@@ -131,7 +131,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png"></a>
+            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png" alt="White Harms Insurance logo"></a>
             <p id="copyright">&copy; 2016 | All Rights Reserved.</p>
           </div>
           <div class="col-md-3 footer-col">
@@ -155,7 +155,7 @@
             </div>
           </div>
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="elp-logo" src="img/elp-logo.png"></a>
+            <a href="#"><img id="elp-logo" src="img/elp-logo.png" alt="Dave Ramsey ELP logo"></a>
           </div>
         </div>
       </div>
