--- a/contact-us.html
+++ b/contact-us.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<img id="logo" src="img/harms-logo.png">
+					<img id="logo" src="img/harms-logo.png" alt="Harms Insurance Logo">
 				</div>
 				<div class="col-md-4 col-md-offset-4">
 					<p class="header-contact-info">Harms Insurance<br>305 S Oklahoma St.<br>Corn, Oklahoma 73024<br>580-343-2485</p>
@@ -84,16 +84,16 @@
             <h1>Get In Touch</h1>
           </div>
           <div class="col-md-10 col-md-offset-1">
-            <div class="col-md-6">
+            <div class="col-md-6 contact-form">
               <form>
-                <label for="name">Your Name (Required)</label><span class="name-hint">Please enter your name</span>
+                <label>Your Name (Required)</label><span class="name-hint">Please enter your name</span>
                 <input id="name" type="text" name="name">
-                <label for="email">Your Email (Required)</label><span class="email-hint">Please enter a valid email address</span>
+                <label>Your Email (Required)</label><span class="email-hint">Please enter a valid email address</span>
                 <input id="email" type="email" name="email">
-                <label for="subject">Subject</label>
+                <label>Subject</label>
                 <input type="text" name="subject">
               </form>
-              <label for="Text1">Your Message</label>
+              <label>Your Message</label>
               <textarea name="Text1" cols="40" rows="5"></textarea>
               <div class="send-btn-wrapper">
                 <a id="send-btn" href="#">Send</a>
@@ -112,6 +112,9 @@
                 <p>Hours: 8-12, 1-5 M-F or by appointment</p>
             </div>
           </div><!--end offset-->
+         </div><!--end row-->
+        </div><!--end container-->
+ 
     </section>
 
     <!--Google Map-->
@@ -131,7 +134,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png"></a>
+            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png" alt="White Harms Insurance logo"></a>
             <p id="copyright">&copy; 2016 | All Rights Reserved.</p>
           </div>
           <div class="col-md-3 footer-col">
@@ -155,7 +158,7 @@
             </div>
           </div>
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="elp-logo" src="img/elp-logo.png"></a>
+            <a href="#"><img id="elp-logo" src="img/elp-logo.png" alt="Dave Ramsey ELP logo"></a>
           </div>
         </div>
       </div>
