--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<img id="logo" src="img/harms-logo.png">
+					<img id="logo" src="img/harms-logo.png" alt="Harms Insurance logo">
 				</div>
 				<div class="col-md-4 col-md-offset-4">
 					<p class="header-contact-info">Harms Insurance<br>305 S Oklahoma St.<br>Corn, Oklahoma 73024<br>580-343-2485</p>
@@ -64,7 +64,7 @@
       <ul>
         <li id="blue-slide">
           <div class="image">
-            <img src="img/blue-bg.jpg">
+            <img src="img/blue-bg.jpg" alt="blue background">
             <h4>WELCOME TO</h4>
             <h4 id="harms-insurance-slide-text">HARMS INSURANCE AGENCY</h4>
             <h1 id="we-provide">We provide personal service</h1>
@@ -75,25 +75,25 @@
         </li>
         <li id="house-slide">
           <div class="image">
-            <img src="img/house.jpg">
+            <img src="img/house.jpg" alt="image of a house">
             <h1 id="home-slider-text">Home Insurance</h1>
           </div>
         </li>
         <li id="car-slide">
           <div class="image">
-            <img src="img/car.jpg">
+            <img src="img/car.jpg" alt="image of a car">
             <h1 id="auto-slider-text">Auto Insurance</h1>
           </div>
         </li>
         <li id="farm-slide">
           <div class="image">
-            <img src="img/barn.jpg">
+            <img src="img/barn.jpg" alt="image of a barn">
             <h1 id="farm-slider-text">Farm Insurance</h1>
           </div>
         </li>
         <li id="sb-slide">
           <div class="image">
-            <img src="img/sb.jpg">
+            <img src="img/sb.jpg" alt="image of a computer">
             <h1 id="sb-slider-text">Small Business Insurance</h1>
           </div>
         </li>
@@ -109,19 +109,19 @@
           <h3 id="products-text">As an independent agency, we can offer a range of insurance products, even beyond those listed below.  Contact us today to see how we can help with your insurance needs.</h3>
           <div class="product-photos">
             <div class="col-md-3">
-              <a href="#"><img src="img/house-sm.jpg"></a>
+              <a href="#"><img src="img/house-sm.jpg" alt="small image of a house"></a>
               <a class="product-link-text" href="#">Home &amp; Auto Insurance</a>
             </div>
             <div class="col-md-3">
-              <a href="#"><img src="img/farm-sm.jpg"></a>
+              <a href="#"><img src="img/farm-sm.jpg" alt="small image of a farm"></a>
               <a class="product-link-text" href="#">Farm Insurance</a>
             </div>
             <div class="col-md-3">
-              <a href="#"><img src="img/business-sm.jpg"></a>
+              <a href="#"><img src="img/business-sm.jpg" alt="small image of a coffee cup"></a>
               <a class="product-link-text" href="#">Small Business Insurance</a>
             </div>
             <div class="col-md-3">
-              <a href="#"><img src="img/life-sm.jpg"></a>
+              <a href="#"><img src="img/life-sm.jpg" alt="small image of a family"></a>
               <a class="product-link-text" href="#">Life Insurance</a>
             </div>
           </div>
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png"></a>
+            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png" alt="White version of Harms Insurance logo"></a>
             <p id="copyright">&copy; 2016 | All Rights Reserved.</p>
           </div>
           <div class="col-md-3 footer-col">
@@ -190,7 +190,7 @@
             </div>
           </div>
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="elp-logo" src="img/elp-logo.png"></a>
+            <a href="#"><img id="elp-logo" src="img/elp-logo.png" alt="Dave Ramsey ELP logo"></a>
           </div>
         </div>
       </div>
