--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<img id="logo" src="img/harms-logo.png">
+					<img id="logo" src="img/harms-logo.png" alt="Harms Insurance logo">
 				</div>
 				<div class="col-md-4 col-md-offset-4">
 					<p class="header-contact-info">Harms Insurance<br>305 S Oklahoma St.<br>Corn, Oklahoma 73024<br>580-343-2485</p>
@@ -98,8 +98,10 @@
                 </tr> 
                 <tr> 
                   <td>Farm</td>
-                </tr>  
+                </tr>
+                <tr>  
                   <td>Mobile Homeowners</td>
+                </tr>
                 <tr>
                   <td>Rental Dwellings</td>
                 </tr>
@@ -168,7 +170,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png"></a>
+            <a href="#"><img id="footer-logo" src="img/harms-logo-white.png" alt="White Harms Insurance logo"></a>
             <p id="copyright">&copy; 2016 | All Rights Reserved.</p>
           </div>
           <div class="col-md-3 footer-col">
@@ -192,7 +194,7 @@
             </div>
           </div>
           <div class="col-md-3 footer-col">
-            <a href="#"><img id="elp-logo" src="img/elp-logo.png"></a>
+            <a href="#"><img id="elp-logo" src="img/elp-logo.png" alt="Dave Ramsey ELP logo"></a>
           </div>
         </div>
       </div>
